--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                             <i class="fas fa-star" data-rating="3"></i>
                             <i class="fas fa-star" data-rating="4"></i>
                             <i class="fas fa-star" data-rating="5"></i>
+                            <i class="fas fa-star" data-rating="6"></i>
+                            <i class="fas fa-star" data-rating="7"></i>
+                            <i class="fas fa-star" data-rating="8"></i>
+                            <i class="fas fa-star" data-rating="9"></i>
+                            <i class="fas fa-star" data-rating="10"></i>
                         </div>
                         <span id="ratingValue">3</span>
                     </div>
